Fixed issue with the layout on smaller devices

--- a/src/components/projectList/index.scss
+++ b/src/components/projectList/index.scss
@@ -2,14 +2,13 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 40px;
-  margin: 12rem 2rem;
+  margin: 12rem 2vw;
 }
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .projects {
     grid-template-columns: 1fr;
-    margin: 12rem 1rem;
   }
 }
 
@@ -17,7 +16,6 @@
 @media (min-width: 576px) {
   .projects {
     grid-template-columns: 1fr;
-    margin: 12rem 1rem;
   }
 }
 
